@@ -794,7 +794,17 @@ The following options are recognized:
     The number of section levels that are numbered by this directive.
     The default is unlimited depth.
 
-
+``prefix`` : string
+    A string that will precede the automatically generated numbering.
+    It usually is, but not needs to, something like "3.2", that will
+    produce "3.2.1", "3.2.2", "3.2.2.1", and so on.
+    It defaults to nothing.
+    
+``start`` : integer
+    The number that will be used for the first section.  Combined with
+    ``prefix``, this may be used to force the right numbering for
+    document splitted over several sources.  The default is 1.
+    
 ------------
  References
 ------------
